--- a/src/components/Home/coursessection.module.css
+++ b/src/components/Home/coursessection.module.css
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 100px 6%;
+  padding: 10px 100px 6%;
 }
 
 .section::before {
