--- a/src/components/Home/whocanlearn.module.css
+++ b/src/components/Home/whocanlearn.module.css
@@ -46,7 +46,11 @@
 }
 
 .heading span {
-  color: hsl(var(--primary));
+  background: linear-gradient(135deg, hsl(var(--primary)) 0%, hsl(var(--accent)) 50%, hsl(var(--primary)) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
 }
 
 .subheading {
